registry: Use g_strv_contains()

GNetworkConnectivity was added in glib 2.44, so was g_strv_contains().
No need of a custom implementation here.

https://bugzilla.gnome.org/show_bug.cgi?id=754093